# SDL_Game_vcpkg

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
My_Cmake/: Clang_setup.cmake  Conan_v1.cmake  Conan_v2.cmake  MyLibs.cmake  Packaging.cmake  Sanitizers.cmake  Vcpkg_Find.cmake  Vcpkg_Target.cmake
SH_files/: CMake_CD  CMake_CDr  CMake_CR  CMake_CRr  CMake_GCD  CMake_GCR  CMake_compile_run  CMake_gen
SH_files_VS/: Cmake_Compile_D  Cmake_Compile_R  vs_ClearWorkspaces  vs_Cmake_CDr  vs_Cmake_CDrValgrind  vs_Cmake_CRr  vs_c_Cmake_clean_gen  vs_c_Cmake_gen
Source/: CMakeLists.txt
Source/Main/: CMakeLists.txt  main.cpp
Source/Main/src/Characters/: Player.cpp  Player.h
Source/Main/src/Core/: Constants.h  Engine.cpp  Engine.h  Node.h  TextureManager.cpp  TextureManager.h  Time.cpp  Time.h
Source/Main/src/Physics/: RigidBody.h  Vector2D.h
Source/Main/src/States/: GameState.cpp  GameState.h  GameStateManager.cpp  GameStateManager.h  MenuState.cpp  MenuState.h  State.cpp  State.h
Source/Main/src/Utils/: Logger.cpp  Logger.h
assets/config/: keys_GameState.ini  window.ini
assets/tilemaps/Dungeon/: Info.txt
assets/tilemaps/Dungeon/Map/: Level_00_Map.json  Level_00_Map_Tiles.json
assets/tilemaps/Zelda_TopDown_gfx/: info.txt
